kubernetes/apps/ai/toolhive/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - 'mcp.xcd.dev'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmcp-mcp-gateway
          port: 4483
